--- a/styles.css
+++ b/styles.css
@@ -55,9 +55,9 @@
 	padding: 0.8rem;
 	width: 100px;
 	border-radius: 10px;
-	background: green;
+	background: rgb(2, 0, 128);
 	outline: none;
-	border-color: green;
+	border-color: rgb(2, 0, 128);
 	border: none;
 	cursor: pointer;
 }
@@ -97,4 +97,4 @@
 	}
 	.options{
 		width: 100vw;
-	}
+    }
