--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	background: #082c6c;
+	background: #0b6c08;
 	color: #fff;
 }
 /* To center everything in game */
